# Mittens

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Player.cpp  Player.h  README.md  RiotAPI.cpp  RiotAPI.h  TFTBot.sln  ValStatsTracker.vcxproj  ValStatsTracker.vcxproj.filters  bot.cpp  bot.h  cmake_install.cmake  data.cpp  data.h  header.hpp  helpers.cpp  helpers.h  ids.json  main.cpp  parsejson.cpp  parsejson.h  setdata.json  todo.txt  vcpkg.json
include/: MatchInfo.h  Player.h  RiotAPI.h  Worker.h  bot.h  data.h  helpers.h
src/: .gitignore  MatchInfo.cpp  Player.cpp  Player.h  RiotAPI.cpp  RiotAPI.h  ValStatsTracker.vcxproj  Worker.cpp  Worker.h  bot.cpp  bot.h  data.cpp  data.h  data_writer.cpp  helpers.cpp  helpers.h  ids.json  main.cpp  parsejson.cpp  parsejson.h  todo.txt  traits.cpp  traits.h
